welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: not enough arguments for method isFacingTrail: (color: Boolean)Boolean.
Unspecified value parameter color.
		if (isFacingTrail()) {
                                 ^SlugSnail:11: error: not enough arguments for method isFacingTrail: (color: Boolean)Boolean.
Unspecified value parameter color.
    			if (isFacingTrail()) {
                                         ^SlugSnail:19: error: not enough arguments for method isFacingTrail: (color: Boolean)Boolean.
Unspecified value parameter color.
    				if (isFacingTrail()) {
                                                 ^SlugSnail:34: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
		if (getCouleurSol() == Color.pink || Color.orange) {
                                                           ^